--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ cairo-rs = "0.7"
 numeric-algs = "0.2"
 nalgebra = "0.18"
 num = "*"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
